package maidsafe.passport;

message Key {
  required bytes name = 1;
  required int32 packet_type = 2;
  required bytes public_key = 3;
  required bytes private_key = 4;
  optional bytes signer_private_key = 5;
  required bytes public_key_signature = 6;
}

message Keyring {
  repeated Key key = 1;
  optional bytes public_name = 2;
}
